Make split and join filters output null with null input.  Don't mistake in-backtick default for outer default.